# opendalfs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  package.yml  test.yml  tests.yml
bench/: bench.py  bench_read_write.py
crates/core/: Cargo.toml
crates/core/src/: fs.rs  lib.rs
crates/service-memory/: Cargo.toml  pyproject.toml
crates/service-memory/src/: lib.rs
crates/service-s3/: Cargo.toml  pyproject.toml
crates/service-s3/src/: lib.rs
opendalfs/: Cargo.toml  __init__.py  decorator.py  file.py  fs.py  options.py  pyproject.toml  registry.py
opendalfs/src/: fs.rs  lib.rs
python/opendalfs/: __init__.py
services/memory/: Cargo.toml  pyproject.toml
services/memory/src/: lib.rs
services/s3/: Cargo.toml  pyproject.toml
services/s3/src/: lib.rs
src/: fs.rs  lib.rs
tests/: conftest.py  test_filesystem.py  test_opendalfs.py
tests/backends/: test_s3.py
tests/core/: test_basic.py  test_buffered_file.py  test_file.py  test_io.py  test_metadata.py  test_protocol_registration.py
tests/docker/: docker-compose.yml
tests/utils/: s3.py
