[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
pyo3 = { version = "0.22.2", features = ["gil-refs"] }
opendal = { version = "0.47.3", default-features = false }
opendalfs-core = { path = "crates/core" }