[project]
name = "opendalfs"
version = "0.0.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.12"
dependencies = [
    "fsspec",
    "opendal",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "ruff",              # Code formatting and linting
]

# Test dependencies
test = [
    "pytest",           # Test framework
    "pytest-asyncio",   # Async test support
    "pytest-cov",       # Coverage reporting
    "s3fs",             # S3 filesystem support
    "boto3",            # AWS S3 client for environment provision
]

# All development dependencies
all = ["opendalfs[dev,test]"]

[tool.setuptools]
packages = ["opendalfs"]
package-dir = {"" = "."}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
opendalfs = ["py.typed"]
