[project]
name = "opendalfs"
version = "0.0.1"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">= 3.12"
dependencies = [
    "fsspec",
    "opendal",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "ruff",              # Code formatting and linting
    "pytest",           # Test framework
    "pytest-asyncio",   # Async test support
    "pytest-cov",       # Coverage reporting
    "pytest-lazy-fixtures", # Lazy fixture loading
]

[tool.setuptools]
packages = ["opendalfs"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
opendalfs = ["py.typed"]


filterwarnings = [
    "error",
    "ignore:A plugin raised an exception during an old-style hookwrapper teardown.",
]