[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
version = "0.1.0"
description = "S3 service for fsspec opendalfs"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
license = { text = "Apache-2.0" }
name = "opendalfs_service_s3"
readme = "../../README.md"
# PyO3 doesn't support python 3.13 yet.
requires-python = ">=3.11, < 3.13"
dependencies = []

[project.urls]
Repository = "https://github.com/fsspec/opendalfs"

[project.optional-dependencies]
test = ["pytest"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff.lint]
ignore = ["F403", "F405"]
